# tetromino-solver

./: .gitattributes  .gitignore  CMakeLists.txt  DLX.cpp  DLX.hpp  exceptions.hpp  main.cpp  matrix_bedlam.txt  matrix_pentomino.txt  polyomino.hpp  problem_instance.hpp  tetromino.cpp  tetromino.hpp
problems/: blueA1.txt  blueA3.txt  green1.txt  red1.txt  yellow1.txt
